Expand fix for touch-scrolling on mobile

--- a/frontend/src/app/product/product.component.scss
+++ b/frontend/src/app/product/product.component.scss
@@ -8,6 +8,7 @@
 .mat-card {
   border: 0;
   border-radius: 0;
+  touch-action: pan-y;
 }
 
 .product {
@@ -24,10 +25,12 @@
   touch-action: pan-y;
   cursor: pointer;
   outline: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .info-box {
   text-align: center;
+  pointer-events: none;
 }
 
 .name {
@@ -62,6 +65,7 @@
   justify-content: center;
   background-position: center;
   background-size: cover;
+  pointer-events: none;
 }
 
 .image-container::before {
